# fast-spell

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.ts  package.json  tsconfig.json
.github/workflows/: npm-publish.yml
dist-tests/: dictionary-loading.test.ts  index.test.ts  performance.test.ts
rust/: Cargo.toml
rust/benches/: spell_checker.rs
rust/src/: affix_rules.rs  dictionary_loader.rs  lib.rs  main.rs  trie.rs
src/: affix-rules.ts  dictionary-loader.ts  index.test.ts  index.ts  parser.ts  performance.test.ts  spellchecker.ts  trie.ts  types.ts
tests/: affix-rules.test.ts  dictionary-loading.test.ts  index.test.ts  performance.test.ts  spellchecker.dist.test.ts  spellchecker.test.ts
