[package]
name = "fast-spell"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "1.1"
lasso = "0.7"
bstr = "1.9"
smallvec = { version = "1.11", features = ["const_generics"] }
simd-json = "0.13"
rayon = "1.8"
crossbeam = "0.8.1"

[dev-dependencies]
criterion = "0.5"

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
strip = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
strip = true

[[bench]]
name = "spell_checker"
harness = false
